@@ -47,7 +47,7 @@ DriverPath=server/drivers/
 #   bayrad, CFontz, CFontz633, CFontzPacket, curses, CwLnx, ea65, 
 #   EyeboxOne, g15, glcdlib, glk, hd44780, icp_a106, imon, IOWarrior,
 #   irman, joy, lb216, lcdm001, lcterm, lirc, MD8800, ms6931, mtc_s16209x,
-#   MtxOrb, NoritakeVFD, picolcd, pyramid, sed1330, sed1520, serialPOS,
+#   MtxOrb, mx5000, NoritakeVFD, picolcd, pyramid, sed1330, sed1520, serialPOS,
 #   serialVFD, shuttleVFD, sli, stv5730, svga, t6963, text, tyan, ula200,
 #   xosd
 Driver=curses
@@ -731,6 +731,16 @@ Speed=19200
 # Afterwards you can modify the settings above and set
 # keypad_set_mode to no again.
 keypad_test_mode=no
+
+
+
+## mx5000 driver for LCD display on the Logitech MX5000 keyboard ##
+[mx5000]
+
+# Select the output device to use [default: /dev/hiddev0]
+Device = /dev/hiddev0
+# Time to wait in ms after the refresh screen has been sent [default: 1000]
+WaitAfterRefresh = 1000
 
 
 
