@@ -40,6 +40,7 @@
   <!ENTITY ms6931 SYSTEM "drivers/ms6931.docbook">
   <!ENTITY mtc_s16209x SYSTEM "drivers/mtc_s16209x.docbook">
   <!ENTITY MtxOrb SYSTEM "drivers/mtxorb.docbook">
+  <!ENTITY mx5000 SYSTEM "drivers/mx5000.docbook">
   <!ENTITY NoritakeVFD SYSTEM "drivers/NoritakeVFD.docbook">
   <!ENTITY picolcd SYSTEM "drivers/picolcd.docbook">
   <!ENTITY pylcd SYSTEM "drivers/pylcd.docbook">
