@@ -46,6 +46,7 @@ v.0.5dev (ongoing development)
  * hd44780 driver: more complete initialization (idea by Pierre Ossman)
  * hd44780 driver: "euro" character mapping table (Markus Dolze)
  * CwLnx driver: support for CW12832
+ + new driver mx5000 for Logitech MX5000 keyboards (Christian Jodar)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
